strings lint fix

--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -300,7 +300,7 @@
     <string name="contact_me">اتصل بي</string>
     <string name="backup_sub">قم بعمل نسخة احتياطية لإعدادات التطبيق الخاص بك إلى الملف</string>
     <string name="corrupted_file_or_not_a_backup">ملف تالف أو ليس نسخة احتياطية</string>
-    <string name="presets_sub">إذا قمت باختيار الاعداد المسبق 125 ، فسيتم حفظ الصورة بحجم 125% من الصورة الأصلية و بجودة 100%، وإذا اخترت الاعداد المسبق 50 ، فسيتم حفظ الصورة بحجم 50% وجودة 50% .</string>
+    <string name="presets_sub" formatted="false">إذا قمت باختيار الاعداد المسبق 125 ، فسيتم حفظ الصورة بحجم 125% من الصورة الأصلية و بجودة 100%، وإذا اخترت الاعداد المسبق 50 ، فسيتم حفظ الصورة بحجم 50% وجودة 50% .</string>
     <string name="font_scale">مقياس الخط</string>
     <string name="restore">استعادة</string>
     <string name="tg_chat_sub">ناقش حول التطبيق واحصل على تعليقات من المستخدمين الآخرين، ويمكنك هنا أيضًا الحصول على تحديثات تجريبية</string>
