--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -597,7 +597,7 @@
     <string name="skip">Прапусціць</string>
     <string name="copy">Копія</string>
     <string name="warning_bytes">Захаванне ў рэжыме %1$s можа быць нестабільным, таму што гэта фармат без страт</string>
-    <string name="presets_sub">Калі вы абралі папярэднюю ўстаноўку 125, выява будзе захавана ў памеры 125% ад арыгінальнай выявы са 100% якасцю. Калі вы выбіраеце значэнне 50, то выява будзе захавана з памерам 50% і якасцю 50%.</string>
+    <string name="presets_sub" formatted="false">Калі вы абралі папярэднюю ўстаноўку 125, выява будзе захавана ў памеры 125% ад арыгінальнай выявы са 100% якасцю. Калі вы выбіраеце значэнне 50, то выява будзе захавана з памерам 50% і якасцю 50%.</string>
     <string name="presets_sub_bytes">Прадусталяванне тут вызначае % выхаднога файла, г. зн., калі вы выбіраеце заданне 50 для выявы памерам 5 МБ, пасля захавання вы атрымаеце выяву памерам 2,5 МБ</string>
     <string name="tg_chat">Тэлеграм чат</string>
     <string name="crop_mask">Кроп-маска</string>
