--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -309,7 +309,7 @@
     <string name="skip">پرش کنید</string>
     <string name="copy">کپی 🀄</string>
     <string name="warning_bytes">ذخیره در حالت %1$s می تواند ناپایدار باشد، زیرا یک قالب بدون ضرر است</string>
-    <string name="presets_sub">اگر 125 از پیش تعیین شده را انتخاب کرده باشید، تصویر به اندازه 125٪ تصویر اصلی با کیفیت 100٪ ذخیره می شود. اگر 50 از پیش تعیین شده را انتخاب کنید، تصویر با اندازه 50 درصد و کیفیت 50 درصد ذخیره می شود.</string>
+    <string name="presets_sub" formatted="false">اگر 125 از پیش تعیین شده را انتخاب کرده باشید، تصویر به اندازه 125٪ تصویر اصلی با کیفیت 100٪ ذخیره می شود. اگر 50 از پیش تعیین شده را انتخاب کنید، تصویر با اندازه 50 درصد و کیفیت 50 درصد ذخیره می شود.</string>
     <string name="presets_sub_bytes">پیش‌تنظیم در اینجا درصد فایل خروجی را تعیین می‌کند، یعنی اگر 50 از پیش تعیین شده را روی تصویر 5 مگابایتی انتخاب کنید، پس از ذخیره کردن تصویر 2.5 مگابایتی دریافت خواهید کرد.</string>
     <string name="randomize_filename">تصادفی کردن نام فایل</string>
     <string name="randomize_filename_sub">اگر فعال باشد نام فایل خروجی کاملا تصادفی خواهد بود</string>
