--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -307,7 +307,7 @@
     <string name="effort_sub">%1$d के मान का अर्थ है तेज़ संपीड़न, जिसके परिणामस्वरूप फाइल का आकार अपेक्षाकृत बड़ा हो जाता है। %2$d का अर्थ है धीमा संपीड़न, जिसके परिणामस्वरूप छोटी फाइल बनती है।</string>
     <string name="backup_sub">फाइल में अपनी ऐप सेटिंग का बैकअप लें</string>
     <string name="corrupted_file_or_not_a_backup">दूषित फाइल या बैकअप नहीं</string>
-    <string name="presets_sub">यदि आपने प्रीसेट 125 का चयन किया है, तो छवि 100% गुणवत्ता के साथ मूल छवि के 125% आकार के रूप में सहेजी जाएगी। यदि आप प्रीसेट 50 चुनते हैं, तो छवि 50% आकार और 50% गुणवत्ता के साथ सहेजी जाएगी।</string>
+    <string name="presets_sub" formatted="false">यदि आपने प्रीसेट 125 का चयन किया है, तो छवि 100% गुणवत्ता के साथ मूल छवि के 125% आकार के रूप में सहेजी जाएगी। यदि आप प्रीसेट 50 चुनते हैं, तो छवि 50% आकार और 50% गुणवत्ता के साथ सहेजी जाएगी।</string>
     <string name="analytics_sub">अनाम ऐप उपयोग आँकड़े एकत्र करने की अनुमति दें</string>
     <string name="font_scale">फ़ॉन्ट पैमाना</string>
     <string name="allow_betas">बीटा को अनुमति दें</string>
