--- a/core/resources/src/main/res/values-in/strings.xml
+++ b/core/resources/src/main/res/values-in/strings.xml
@@ -293,7 +293,7 @@
     <string name="cache">Cache</string>
     <string name="create">Membuat</string>
     <string name="presets_sub_bytes">Preset di sini menentukan % dari file output, misalnya jika Anda memilih preset 50 pada gambar 5mb maka Anda akan mendapatkan gambar 2,5mb setelah disimpan</string>
-    <string name="presets_sub">Jika Anda memilih preset 125, gambar akan disimpan 125% dari ukuran gambar asli dengan kualitas 100%, dan jika Anda memilih preset 50, maka ukuran gambar akan disimpan 50% dan kualitas 50%.</string>
+    <string name="presets_sub" formatted="false">Jika Anda memilih preset 125, gambar akan disimpan 125% dari ukuran gambar asli dengan kualitas 100%, dan jika Anda memilih preset 50, maka ukuran gambar akan disimpan 50% dan kualitas 50%.</string>
     <string name="randomize_filename_sub">Jika diaktifkan, nama file keluaran akan sepenuhnya acak</string>
     <string name="randomize_filename">Acak nama file</string>
     <string name="saved_to">Simpan ke folder %1$s dengan nama %2$s</string>
