--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -686,7 +686,7 @@
     <string name="cannot_change_arrangement_while_options_grouping_enabled">Опцияларды топтау қосулы кезде реттеуді өзгерту мүмкін емес</string>
     <string name="secondary_customization">Қосымша теңшеу</string>
     <string name="fallback_option">Кері опция</string>
-    <string name="presets_sub">Алдын ала орнатылған 125 параметрін таңдасаңыз, сурет 100% сапасымен түпнұсқа кескіннің 125% өлшемі ретінде сақталады. Алдын ала орнатылған 50 параметрін таңдасаңыз, сурет 50% өлшеммен және 50% сапамен сақталады.</string>
+    <string name="presets_sub" formatted="false">Алдын ала орнатылған 125 параметрін таңдасаңыз, сурет 100% сапасымен түпнұсқа кескіннің 125% өлшемі ретінде сақталады. Алдын ала орнатылған 50 параметрін таңдасаңыз, сурет 50% өлшеммен және 50% сапамен сақталады.</string>
     <string name="presets_sub_bytes">Мұнда алдын ала орнату шығыс файлының % анықтайды, яғни 5 мб суретте алдын ала орнатылған 50 параметрін таңдасаңыз, сақталғаннан кейін 2,5 мб кескінді аласыз.</string>
     <string name="tg_chat">Telegram чаты</string>
     <string name="tg_chat_sub">Қолданбаны талқылаңыз және басқа пайдаланушылардан пікір алыңыз. Сондай-ақ, бета жаңартулары мен түсініктерін осы жерден ала аласыз.</string>
