--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -293,7 +293,7 @@
     <string name="skip">ਛੱਡੋ</string>
     <string name="copy">ਕਾਪੀ ਕਰੋ</string>
     <string name="warning_bytes">%1$s ਮੋਡ ਵਿੱਚ ਸੰਭਾਲਣਾ ਅਸਥਿਰ ਹੋ ਸਕਦਾ ਹੈ, ਕਿਉਂਕਿ ਇਹ ਇੱਕ ਨੁਕਸਾਨ ਰਹਿਤ ਫਾਰਮੈਟ ਹੈ</string>
-    <string name="presets_sub">ਜੇਕਰ ਤੁਸੀਂ ਪ੍ਰੀਸੈਟ 125 ਦੀ ਚੋਣ ਕੀਤੀ ਹੈ, ਤਾਂ ਚਿੱਤਰ ਨੂੰ 100% ਗੁਣਵੱਤਾ ਦੇ ਨਾਲ ਅਸਲ ਚਿੱਤਰ ਦੇ 125% ਆਕਾਰ ਵਜੋਂ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਜਾਵੇਗਾ। ਜੇਕਰ ਤੁਸੀਂ ਪ੍ਰੀਸੈਟ 50 ਦੀ ਚੋਣ ਕਰਦੇ ਹੋ, ਤਾਂ ਚਿੱਤਰ ਨੂੰ 50% ਆਕਾਰ ਅਤੇ 50% ਗੁਣਵੱਤਾ ਨਾਲ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਜਾਵੇਗਾ।</string>
+    <string name="presets_sub" formatted="false">ਜੇਕਰ ਤੁਸੀਂ ਪ੍ਰੀਸੈਟ 125 ਦੀ ਚੋਣ ਕੀਤੀ ਹੈ, ਤਾਂ ਚਿੱਤਰ ਨੂੰ 100% ਗੁਣਵੱਤਾ ਦੇ ਨਾਲ ਅਸਲ ਚਿੱਤਰ ਦੇ 125% ਆਕਾਰ ਵਜੋਂ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਜਾਵੇਗਾ। ਜੇਕਰ ਤੁਸੀਂ ਪ੍ਰੀਸੈਟ 50 ਦੀ ਚੋਣ ਕਰਦੇ ਹੋ, ਤਾਂ ਚਿੱਤਰ ਨੂੰ 50% ਆਕਾਰ ਅਤੇ 50% ਗੁਣਵੱਤਾ ਨਾਲ ਸੁਰੱਖਿਅਤ ਕੀਤਾ ਜਾਵੇਗਾ।</string>
     <string name="presets_sub_bytes">ਇੱਥੇ ਪ੍ਰੀਸੈਟ ਆਉਟਪੁੱਟ ਫਾਈਲ ਦਾ % ਨਿਰਧਾਰਤ ਕਰਦਾ ਹੈ, ਭਾਵ ਜੇਕਰ ਤੁਸੀਂ 5mb ਚਿੱਤਰ \'ਤੇ ਪ੍ਰੀਸੈਟ 50 ਦੀ ਚੋਣ ਕਰਦੇ ਹੋ ਤਾਂ ਤੁਹਾਨੂੰ ਸੇਵ ਕਰਨ ਤੋਂ ਬਾਅਦ 2.5mb ਚਿੱਤਰ ਮਿਲੇਗਾ।</string>
     <string name="randomize_filename">ਫਾਈਲ ਨਾਮ ਨੂੰ ਰੈਂਡਮਾਈਜ਼ ਕਰੋ</string>
     <string name="randomize_filename_sub">ਜੇਕਰ ਸਮਰਥਿਤ ਆਉਟਪੁੱਟ ਫਾਈਲ ਨਾਮ ਪੂਰੀ ਤਰ੍ਹਾਂ ਬੇਤਰਤੀਬ ਹੋ ਜਾਵੇਗਾ</string>
