--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -335,7 +335,7 @@
     <string name="search_option">Претрага</string>
     <string name="free">бесплатно</string>
     <string name="create_issue">Цреате Иссуе</string>
-    <string name="presets_sub">Ако сте изабрали унапред подешено 125, слика ће бити сачувана као 125% величине оригиналне слике са 100% квалитетом. Ако изаберете унапред подешено 50, слика ће бити сачувана са 50% величине и 50% квалитета.</string>
+    <string name="presets_sub" formatted="false">Ако сте изабрали унапред подешено 125, слика ће бити сачувана као 125% величине оригиналне слике са 100% квалитетом. Ако изаберете унапред подешено 50, слика ће бити сачувана са 50% величине и 50% квалитета.</string>
     <string name="presets_sub_bytes">Пресет овде одређује % излазне датотеке, тј. ако изаберете унапред подешено 50 на слици од 5мб онда ћете након чувања добити слику од 2,5мб</string>
     <string name="randomize_filename_sub">Ако је омогућено излазно име датотеке ће бити потпуно насумично</string>
     <string name="saved_to">Сачувано у фолдеру %1$s са именом %2$s</string>
