--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -318,7 +318,7 @@
     <string name="skip">தவிர்க்கவும்</string>
     <string name="copy">நகலெடுக்கவும்</string>
     <string name="warning_bytes">%1$s பயன்முறையில் சேமிப்பது நிலையற்றதாக இருக்கலாம், ஏனெனில் இது இழப்பற்ற வடிவமாகும்</string>
-    <string name="presets_sub">நீங்கள் முன்னமைக்கப்பட்ட 125 ஐத் தேர்ந்தெடுத்திருந்தால், அசல் படத்தின் 125% அளவு 100% தரத்துடன் படம் சேமிக்கப்படும். நீங்கள் முன்னமைக்கப்பட்ட 50 ஐ தேர்வு செய்தால், படம் 50% அளவு மற்றும் 50% தரத்துடன் சேமிக்கப்படும்.</string>
+    <string name="presets_sub" formatted="false">நீங்கள் முன்னமைக்கப்பட்ட 125 ஐத் தேர்ந்தெடுத்திருந்தால், அசல் படத்தின் 125% அளவு 100% தரத்துடன் படம் சேமிக்கப்படும். நீங்கள் முன்னமைக்கப்பட்ட 50 ஐ தேர்வு செய்தால், படம் 50% அளவு மற்றும் 50% தரத்துடன் சேமிக்கப்படும்.</string>
     <string name="presets_sub_bytes">இங்கே முன்னமைவு என்பது அவுட்புட் கோப்பின் %ஐ தீர்மானிக்கிறது, அதாவது 5எம்பி படத்தில் ப்ரீசெட் 50ஐத் தேர்ந்தெடுத்தால், சேமித்த பிறகு 2.5எம்பி படத்தைப் பெறுவீர்கள்.</string>
     <string name="randomize_filename">கோப்பு பெயரை சீரற்றதாக்கு</string>
     <string name="randomize_filename_sub">இயக்கப்பட்டால், வெளியீட்டு கோப்பு பெயர் முற்றிலும் சீரற்றதாக இருக்கும்</string>
