--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -300,7 +300,7 @@
     <string name="skip">దాటవేయి</string>
     <string name="copy">కాపీ చేయండి</string>
     <string name="warning_bytes">%1$s మోడ్‌లో సేవ్ చేయడం అస్థిరంగా ఉంటుంది, ఎందుకంటే ఇది లాస్‌లెస్ ఫార్మాట్</string>
-    <string name="presets_sub">మీరు ప్రీసెట్ 125ని ఎంచుకున్నట్లయితే, చిత్రం 100% నాణ్యతతో అసలు చిత్రం యొక్క 125% పరిమాణంగా సేవ్ చేయబడుతుంది. మీరు ప్రీసెట్ 50ని ఎంచుకుంటే, చిత్రం 50% పరిమాణం మరియు 50% నాణ్యతతో సేవ్ చేయబడుతుంది.</string>
+    <string name="presets_sub" formatted="false">మీరు ప్రీసెట్ 125ని ఎంచుకున్నట్లయితే, చిత్రం 100% నాణ్యతతో అసలు చిత్రం యొక్క 125% పరిమాణంగా సేవ్ చేయబడుతుంది. మీరు ప్రీసెట్ 50ని ఎంచుకుంటే, చిత్రం 50% పరిమాణం మరియు 50% నాణ్యతతో సేవ్ చేయబడుతుంది.</string>
     <string name="randomize_filename">ఫైల్ పేరును యాదృచ్ఛికంగా మార్చండి</string>
     <string name="randomize_filename_sub">ప్రారంభించబడితే, అవుట్‌పుట్ ఫైల్ పేరు పూర్తిగా యాదృచ్ఛికంగా ఉంటుంది</string>
     <string name="saved_to">%2$s పేరుతో %1$s ఫోల్డర్‌కి సేవ్ చేయబడింది</string>
