--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -340,7 +340,7 @@
     <string name="images_overwritten">รูปภาพถูกเขียนทับที่ปลายทางเดิม</string>
     <string name="emoji_as_color_scheme">อิโมจิเป็นโครงร่างสี</string>
     <string name="backup_sub">สำรองการตั้งค่าแอปของคุณเป็นไฟล์</string>
-    <string name="presets_sub">หากคุณเลือกค่าที่ตั้งไว้ล่วงหน้า 125 รูปภาพจะถูกบันทึกเป็นขนาด 125% ของรูปภาพต้นฉบับพร้อมคุณภาพ 100% หากคุณเลือกค่าที่ตั้งล่วงหน้า 50 รูปภาพจะถูกบันทึกด้วยขนาด 50% และคุณภาพ 50%</string>
+    <string name="presets_sub" formatted="false">หากคุณเลือกค่าที่ตั้งไว้ล่วงหน้า 125 รูปภาพจะถูกบันทึกเป็นขนาด 125% ของรูปภาพต้นฉบับพร้อมคุณภาพ 100% หากคุณเลือกค่าที่ตั้งล่วงหน้า 50 รูปภาพจะถูกบันทึกด้วยขนาด 50% และคุณภาพ 50%</string>
     <string name="randomize_filename_sub">หากเปิดใช้งานชื่อไฟล์เอาต์พุตจะเป็นการสุ่มอย่างสมบูรณ์</string>
     <string name="presets_sub_bytes">การตั้งค่าล่วงหน้าที่นี่จะกำหนด % ของไฟล์เอาต์พุต เช่น หากคุณเลือกการตั้งค่าล่วงหน้า 50 บนรูปภาพขนาด 5mb คุณจะได้รูปภาพขนาด 2.5mb หลังจากบันทึก</string>
     <string name="backup">สำรองข้อมูล</string>
