--- a/core/resources/src/main/res/values-ug/strings.xml
+++ b/core/resources/src/main/res/values-ug/strings.xml
@@ -276,7 +276,7 @@
     <string name="skip">ئاتلاش</string>
     <string name="copy">كۆچۈرۈڭ</string>
     <string name="warning_bytes">%1$s ھالەتتە تېجەش تۇراقسىز بولىدۇ ، چۈنكى ئۇ زىيانسىز فورمات</string>
-    <string name="presets_sub">ئالدىن بېكىتىلگەن 125 نى تاللىغان بولسىڭىز ، رەسىم 100% سۈپەتلىك ئەسلى رەسىمنىڭ% 125 چوڭلۇقىدا ساقلىنىدۇ. ئەگەر ئالدىن بېكىتىلگەن 50 نى تاللىسىڭىز ، ئۇنداقتا رەسىم% 50 چوڭلۇق ۋە% 50 سۈپەتلىك ساقلىنىدۇ.</string>
+    <string name="presets_sub" formatted="false">ئالدىن بېكىتىلگەن 125 نى تاللىغان بولسىڭىز ، رەسىم 100% سۈپەتلىك ئەسلى رەسىمنىڭ% 125 چوڭلۇقىدا ساقلىنىدۇ. ئەگەر ئالدىن بېكىتىلگەن 50 نى تاللىسىڭىز ، ئۇنداقتا رەسىم% 50 چوڭلۇق ۋە% 50 سۈپەتلىك ساقلىنىدۇ.</string>
     <string name="presets_sub_bytes">بۇ يەردىكى ئالدىن بەلگىلەش چىقىرىش ھۆججىتىنىڭ%% نى بەلگىلەيدۇ ، يەنى 5mb لىق رەسىمگە ئالدىن 50 نى تاللىسىڭىز ، ساقلىغاندىن كېيىن 2.5mb لىق رەسىمگە ئېرىشىسىز</string>
     <string name="randomize_filename">ھۆججەت نامىنى ئىختىيارىي قىلىڭ</string>
     <string name="randomize_filename_sub">قوزغىتىلغان چىقىرىش ھۆججەت ئىسمى تولۇق ئىختىيارى بولىدۇ</string>
