--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -292,7 +292,7 @@
     <string name="skip">Пропустити</string>
     <string name="copy">Копіювати</string>
     <string name="warning_bytes">Збереження в режимі %1$s може бути нестабільним, оскільки це формат без втрат</string>
-    <string name="presets_sub">Якщо ви виберете параметр 125, зображення буде збережено у розмірі 125% від оригіналу зі 100% якістю, а якщо ви виберете параметр 50, то зображення буде збережено у розмірі 50% і 50% якістю</string>
+    <string name="presets_sub" formatted="false">Якщо ви виберете параметр 125, зображення буде збережено у розмірі 125% від оригіналу зі 100% якістю, а якщо ви виберете параметр 50, то зображення буде збережено у розмірі 50% і 50% якістю</string>
     <string name="presets_sub_bytes">Параметр тут визначає % вихідного файлу, наприклад, якщо ви виберете параметр 50 для зображення розміром 5 МБ, то після збереження ви отримаєте зображення розміром 2,5 МБ</string>
     <string name="saved_to_without_filename">Збережено до теки %1$s</string>
     <string name="tg_chat_sub">Обговорити застосунок і отримати зворотній зв\'язок від інших користувачів, також тут ви можете отримати бета оновлення та ідеї</string>
