--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -292,7 +292,7 @@
     <string name="key">Chiave</string>
     <string name="implementation_sub">AES-256, modalità GCM, nessuna spaziatura interna, IV casuali a 12 byte. Le chiavi vengono utilizzate come hash SHA-3 (256 bit).</string>
     <string name="file_size">Dimensione del file</string>
-    <string name="presets_sub">Se è stata selezionata la preset 125, l\'immagine verrà salvata con una dimensione del 125% dell\'immagine originale con una qualità del 100%. Se si sceglie il preset 50, l\'immagine verrà salvata con il 50% di dimensione e il 50% di qualità.</string>
+    <string name="presets_sub" formatted="false">Se è stata selezionata la preset 125, l\'immagine verrà salvata con una dimensione del 125% dell\'immagine originale con una qualità del 100%. Se si sceglie il preset 50, l\'immagine verrà salvata con il 50% di dimensione e il 50% di qualità.</string>
     <string name="reset_settings_sub">In questo modo verranno ripristinate le impostazioni ai valori predefiniti. Si noti che questa operazione non può essere annullata senza un file di backup menzionato sopra.</string>
     <string name="something_went_wrong_emphasis">Ooops… Qualcosa è andato storto. Puoi scrivermi utilizzando le opzioni di seguito e cercherò di trovare una soluzione</string>
     <string name="tg_chat">Chat Telegram</string>
