--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -395,7 +395,7 @@
     <string name="randomize_filename_sub">Jeśli włączone, nazwa pliku wyjściowego będzie w pełni losowa</string>
     <string name="saved_to">Zapisano w folderze %1$s z nazwą %2$s</string>
     <string name="presets_sub_bytes">Preset określa % rozmiaru pliku wyjściowego, tj. jeśli wybierzesz ustawienie wstępne 50 na obrazie o rozmiarze 5 MB, po zapisaniu otrzymasz obraz o rozmiarze 2,5 MB.</string>
-    <string name="presets_sub">Jeśli wybrano ustawienie 125, obraz zostanie zapisany w rozmiarze 125% oryginalnego obrazu z jakością 100%. W przypadku wybrania ustawienia 50 obraz zostanie zapisany w rozmiarze 50% i jakości 50%.</string>
+    <string name="presets_sub" formatted="false">Jeśli wybrano ustawienie 125, obraz zostanie zapisany w rozmiarze 125% oryginalnego obrazu z jakością 100%. W przypadku wybrania ustawienia 50 obraz zostanie zapisany w rozmiarze 50% i jakości 50%.</string>
     <string name="text">Tekst</string>
     <string name="font_scale">Skala czcionki</string>
     <string name="defaultt">Domyślna</string>
